RESOLVED FIXED65597
FontCache::getFontData() does not set the familyIndex to cAllFamiliesScanned if the last font is a custom font
https://bugs.webkit.org/show_bug.cgi?id=65597
Summary FontCache::getFontData() does not set the familyIndex to cAllFamiliesScanned ...
mitz
Reported 2011-08-03 00:37:05 PDT
FontCache::getFontData() does not set the familyIndex to cAllFamiliesScanned if the last font is a custom font
Attachments
Patch (2.21 KB, patch)
2011-08-03 00:39 PDT, mitz
simon.fraser: review+
mitz
Comment 1 2011-08-03 00:39:50 PDT
mitz
Comment 2 2011-08-03 09:46:48 PDT
Note You need to log in before you can comment on or make changes to this bug.