FontCache::getFontData() does not set the familyIndex to cAllFamiliesScanned if the last font is a custom font https://bugs.webkit.org/show_bug.cgi?id=65597

Reviewed by Simon Fraser.

No test added because behavior is unchanged, but this saves a call to getFontData().

* platform/graphics/FontCache.cpp:
(WebCore::FontCache::getFontData): Eliminated early return inside the loop, allowing execution
to continue and familyIndex to be set.



Canonical link: https://commits.webkit.org/81425@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@92287 268f45cc-cd09-0410-ab3c-d52691b4dbfc